Cyber Daily Remap

--- a/app/templates/legal.html
+++ b/app/templates/legal.html
@@ -175,8 +175,8 @@
 
     <h2>11) Contact</h2>
     <p>Company: THE REAL ROUNDUP LLC<br />
-        Address: YOUR MAILING ADDRESS HERE<br />
-        Email: <a href="mailto:support@therealroundup.com">support@therealroundup.com</a></p>
+        Address: 3715 N Centrepoint Way Apt J102<br />
+        Email: <a href="mailto:wc@therealroundup.com">wc@therealroundup.com</a></p>
 
 </body>
 
